tests/enum_into/compile_fail/variant/invalid_target_variant.stderr
error[E0599]: no variant or associated item named `NonExistent` found for enum `Target` in the current scope
  --> tests/enum_into/compile_fail/variant/invalid_target_variant.rs:6:25
   |
6  |     #[enum_into(Target::NonExistent)] // Invalid variant name
   |                         ^^^^^^^^^^^ variant or associated item not found in `Target`
...
10 | enum Target {
   | ----------- variant or associated item `NonExistent` not found for this enum
